# uiuapp

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix  shell.nix
mockup/: mockup.css
outdated-mockup/: mockup.html
src/: main.rs
uiuapp/: Cargo.toml  Dioxus.toml
uiuapp/assets/: uiuapp.css
uiuapp/src/: highlighting.rs  lib.rs  main.rs  multimedia.rs  ui.rs
