[package]
name = "uiuapp"
version = "0.1.0"
authors = ["amatgil <amatgilvinyes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6", features = ["web"] }

# Debug
dioxus-logger = "0.5.1"
uiua = { version = "0.16.0", default-features = false, features = ["batteries", "web"] }
getrandom = { version = "0.2", features = ["js"] } # uiua complains otherwise
web-sys = { version = "0.3.77", features = [
  "CssStyleDeclaration",
  "DomRect",
  "Storage",
  "HtmlAudioElement",
  "HtmlBrElement",
  "HtmlElement",
  "Selection",
  "Node",
  "Clipboard",
  "ClipboardEvent",
  "DataTransfer",
  "Navigator",
  "Permissions",
  "ScrollIntoViewOptions",
  "ScrollBehavior",
  "ScrollLogicalPosition",
  "StorageManager",
  "FileReader",
  "EventInit",
  "DataTransfer",
  "File",
  "FileList",
  "ResizeObserver",
  "ResizeObserverEntry",
  "Performance",
]}
lazy_static = "1.5.0"



[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
